# nitro

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  GitSubmoduleUpdate.cmake  LICENSE  Nitro.cmake  NitroConfig.cmake  README.md  appveyor.yml  meson.build
.github/workflows/: c-cpp.yml  cmake.yml  meson.yml
include/nitro/: format.hpp  tuple_operators.hpp
include/nitro/better_options/: arguments.hpp  exception.hpp  fwd.hpp  parser.hpp  user_input.hpp
include/nitro/better_options/option/: base.hpp  group.hpp  multi_option.hpp  option.hpp  toggle.hpp
include/nitro/broken_options/: argument.hpp  argument_parser.hpp  exception.hpp  fwd.hpp  multi_option.hpp  option.hpp  options.hpp  parser.hpp  parser.ipp  toggle.hpp
include/nitro/broken_options/option/: base.hpp  group.hpp  multi_option.hpp  option.hpp  toggle.hpp
include/nitro/dl/: dl.hpp  exception.hpp  symbol.hpp
include/nitro/env/: get.hpp  hostname.hpp  process.hpp
include/nitro/except/: exception.hpp  raise.hpp
include/nitro/format/: format.hpp
include/nitro/io/: terminal.hpp
include/nitro/jiffy/: jiffy.hpp
include/nitro/lang/: catch.hpp  enumerate.hpp  fixed_vector.hpp  hash.hpp  optional.hpp  quaint_ptr.hpp  reverse.hpp  string.hpp  string_ref.hpp  tuple_foreach.hpp  tuple_operators.hpp  unordered.hpp
include/nitro/log/: logger.hpp  record.hpp  severity.hpp  stream.hpp  tag.hpp
include/nitro/log/attribute/: hostname.hpp  jiffy.hpp  message.hpp  mpi_rank.hpp  omp_thread_id.hpp  pid.hpp  pthread_id.hpp  rank.hpp  severity.hpp  std_thread_id.hpp  tag.hpp  timestamp.hpp
include/nitro/log/detail/: has_attribute.hpp  set_attribute.hpp
include/nitro/log/filter/: and_filter.hpp  mpi_master_filter.hpp  not_filter.hpp  null_filter.hpp  or_filter.hpp  severity_filter.hpp
include/nitro/log/sink/: logfile.hpp  null.hpp  sequence.hpp  stderr.hpp  stderr_mt.hpp  stdout.hpp  stdout_mt.hpp  stdout_omp.hpp  syslog.hpp
include/nitro/meta/: callable.hpp  std_hashable.hpp  variadic.hpp
include/nitro/options/: arguments.hpp  exception.hpp  fwd.hpp  parser.hpp  user_input.hpp
include/nitro/options/option/: base.hpp  group.hpp  multi_option.hpp  option.hpp  toggle.hpp
src/better_options/: group.cpp  parser.cpp
src/env/: get.cpp  hostname.cpp  process.cpp
src/jiffy/: jiffy-linux.cpp  jiffy-mac.cpp  jiffy-win.cpp  jiffy.cpp
src/options/: group.cpp  multi_option.cpp  option.cpp  parser.cpp  toggle.cpp
tests/: CMakeLists.txt  better_options_test.cpp  broken_options_test.cpp  catch_test.cpp  dl_test.cpp  dl_test_other.cpp  enumerate_test.cpp  env_get_test.cpp  fixed_vector_test.cpp  format_test.cpp  is_callable_test.cpp  jiffy_test.cpp  logging_jiffy_test.cpp  logging_test.cpp  meson.build  nitro_test_lib.cpp  options_test.cpp  quaint_ptr_test.cpp  reverse_test.cpp  string_ref_test.cpp  string_test.cpp  tuple_operators_test.cpp  unordered_test.cpp
